--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span class="movie-duration">1h 55m</span>
             </p>
             <div class="container">
-                <img src="images/freeguy.jpg" alt="Free Guy Poster" class="movie-poster">
+                <img src="images/freeGuy.jpg" alt="Free Guy Poster" class="movie-poster">
         
                 <div id="myModal" class="modal">
                     <div class="modal-content">
